<resources>
    <string-array name="home_elements">
        <item>Menu</item>
        <item>@string/restaurants</item>
        <item>@string/orders</item>
    </string-array>
    <string-array name="home_elements_description">
        <item>@string/go_to_menu</item>
        <item>@string/look_where_is_nearest_restaurant</item>
        <item>@string/check_your_orders</item>
    </string-array>
    <string-array name="home_elements_icons">
        <item>ic_restaurant_menu_24dp</item>
        <item>ic_place_24dp</item>
        <item>ic_event_orders_24dp</item>
    </string-array>
    <string-array name="home_elements_images">
        <item>menu</item>
        <item>restaurant</item>
        <item>orders</item>
    </string-array>

    <string-array name="category_array">
        <item>@string/all</item>
        <item>@string/Burger</item>
        <item>@string/Wrap</item>
        <item>@string/Pizza</item>
        <item>@string/salad</item>
        <item>@string/cold_drinks</item>
        <item>@string/coffee_tea</item>
    </string-array>

    <string name="facebook_app_id" translatable="false">283627319164335</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb283627319164335</string>

    <string name="app_name">RestaurantClient</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="polish">polish</string>
    <string name="server_error">Cannot connect to server</string>
    <string name="logged_in">Logged in</string>
    <string name="login_failed">Wrong username or password</string>
    <string name="login_c">Login:</string>
    <string name="password_c">Password:</string>
    <string name="log_in">Login</string>
    <string name="price">Price:</string>
    <string name="title_activity_product" translatable="false">ProductActivity</string>
    <string name="add_to_order">Add to order</string>
    <string name="home">Home</string>
    <string name="restaurants">Restaurants</string>
    <string name="orders">Orders</string>
    <string name="category_colon">Category:</string>
    <string name="all">All</string>
    <string name="Burger">Burger</string>
    <string name="Wrap">Wrap</string>
    <string name="Pizza">Pizza</string>
    <string name="cold_drinks">Cold drinks</string>
    <string name="coffee_tea">Coffee, tea</string>
    <string name="salad">Salad</string>
    <string name="title_activity_restaurants" translatable="false">RestaurantsActivity</string>
    <string name="order">Order</string>
    <string name="confirm_order">Confirm order</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="undo">Undo</string>
    <string name="AddedItemToBasket">Added item/s to basket</string>
    <string name="total">Total</string>
    <string name="change_amount">Change amount</string>
    <string name="title">Title</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="empty_basket">Basket is empty!</string>
    <string name="basket">Basket</string>
    <string name="canceled">Canceled</string>
    <string name="confirmed">Confirmed</string>
    <string name="processing">Processing</string>
    <string name="in_delivery">In delivery</string>
    <string name="completed">Completed</string>
    <string name="my_account">My account</string>
    <string name="log_out">Logout</string>
    <string name="logged_out">Logged out</string>
    <string name="register">Register</string>
    <string name="username_c">Username:</string>
    <string name="name_c">Name:</string>
    <string name="surname_c">Surname:</string>
    <string name="phone_number_c">Phone number:</string>
    <string name="email_c" translatable="false">E-mail:</string>
    <string name="confirm_password_c">Confirm password:</string>
    <string name="change_upper">CHANGE</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="adress">Address</string>
    <string name="surname">Surname</string>
    <string name="old_c">Old:</string>
    <string name="new_c">New:</string>
    <string name="change">Change</string>
    <string name="adress_to_far">Address too far away from restaurant</string>
    <string name="address">Address</string>
    <string name="add_new_address">Add new address</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="building_number">Building number</string>
    <string name="apartment_number">Apartment_number</string>
    <string name="address_added">Address added</string>
    <string name="edit_address">Edit address</string>
    <string name="delivery">Delivery</string>
    <string name="self_pickup">Self-pickup</string>
    <string name="delivery_address">Delivery address</string>
    <string name="yours_restaurant">Yours_restaurant</string>
    <string name="select">Select</string>
    <string name="select_pickup_option">Select pickup option</string>
    <string name="empty_address_list">No addresses</string>
    <string name="no_selected_address">No selected address</string>
    <string name="no_phone_number">No phone number</string>
    <string name="finished_orders">Finished orders</string>
    <string name="no_orders">No orders</string>
    <string name="license_content">"All images in app are licensed under creative commons provided by https://www.pexels.com/. For more details about license and photos please visit website  visit website. "</string>
    <string name="license">License</string>
    <string name="author_credentials">Application author: Rafał Kostka</string>
    <string name="author_email" translatable="false">kostka.arx@gmail.com</string>
    <string name="author_github" translatable="false">https://github.com/kostkarafal</string>
    <string name="author_linkedIn" translatable="false">https://www.linkedin.com/in/rafa%C5%82-kostka-7b439013a/</string>
    <string name="github_c" translatable="false">Github:</string>
    <string name="linkedin" translatable="false">LinkedIn:</string>
    <string name="go_to_menu">Go to menu</string>
    <string name="look_where_is_nearest_restaurant">Look where is nearest restaurant</string>
    <string name="check_your_orders">Check your orders</string>

</resources>
