<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_24dp"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_store_mall_24dp"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_event_orders_24dp"
            android:title="@string/orders" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
